--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -197,4 +197,9 @@
     <string name="preference_hide_media_on_lockscreen_title">Private Benachrichtigung</string>
     <string name="preference_hide_media_on_lockscreen_text">Versteckt Medieninformationen auf dem Sperrbildschirm (Abhängig von den Benachrichtungseinstellungen des Systems)</string>
     <string name="notification_sensitive_content_replacement">Inhalt ausgeblendet</string>
+    <string name="dialog_sleep_timer_action_start">Start</string>
+    <string name="dialog_sleep_timer">Setze Abschaltdauer</string>
+    <string name="pop_menu_action_start_sleep_timer">Aktiviere zeitbasierte Abschaltung</string>
+    <string name="pop_menu_action_cancel_sleep_timer">Stoppe zeitbasierte Abschaltung</string>
+    <string name="snackbar_sleep_timer_confirmation_message">Zeitbasierte Abschaltung aktiviert</string>
 </resources>
